tests/test_proof/bad/enums_inj-empty.catala_en
## Article

```catala
declaration enumeration E:
  -- C1
  -- C2

declaration scope A:
  context x content E
  context y content integer

scope A:
  definition x equals C1
  definition y under condition x = C1 consequence equals 1
```

```catala-test {id="Proof"}
catala Proof --disable_counterexamples 
```
